@@ -14,6 +14,11 @@ any necessary information about installation or upgrade notes.
 * The Django manage.py script for managing eXist-DB index configuration
   files now takes optional username and password credentials, for use
   with sites that run in guest mode or with limited access.
+* bugfix: :class:`~eulexistdb.query.QuerySet` greater than and less than
+  filters no longer assume numeric values should be treated as numbers,
+  to allow comparison of string values of numbers.
+* bugfix: :class:`~eulexistdb.query.Xquery` now correctly generates
+  xqueries with more than one where statement.
 
 0.18
 ----
